--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "vue": "^2.6.11",
     "vue-cookies": "^1.7.3",
     "vue-router": "^3.2.0",
+    "vuelidate": "^0.7.5",
     "vuetify": "^2.3.7",
     "vuex": "^3.4.0",
     "vuex-persistedstate": "^3.0.1"
