--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,8 +13,12 @@
     "bootstrap-vue": "^2.16.0",
     "bootstrap4": "0.0.1-security",
     "core-js": "^3.6.5",
+    "jQuery": "^1.7.4",
     "jquery": "^3.5.1",
+    "jsdom": "^16.4.0",
+    "location": "0.0.1",
     "moment": "^2.27.0",
+    "navigator": "^1.0.1",
     "popper.js": "^1.16.1",
     "vue": "^2.6.11",
     "vue-cookies": "^1.7.3",
@@ -23,7 +27,8 @@
     "vue-scrollmonitor": "^0.1.0",
     "vuetify": "^2.3.7",
     "vuex": "^3.4.0",
-    "vuex-persistedstate": "^3.0.1"
+    "vuex-persistedstate": "^3.0.1",
+    "xmlhttprequest": "^1.8.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.4.0",
